# universe

canvas/: README  README.md  fry.html  quiz4.html  quiz5.html  quiz6.html  quiz7.html  shape_quiz3.html  video1.html  video1.js  video2.html  video2.js  video3.html  video3.js
canvas/videos/: RotatingSpaceship.webm
chrome/test1/: README  manifest.json  popup.js
cmake/: CMakeLists.txt
cv/Projeto1/: .CMakeLists.txt.swp  CMakeLists.txt  Image.h  main.cpp  quickselect.h
cv/Projeto1/.tmp/libpng++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  read.cpp  write.cpp  write2.cpp
game/: README.md  gamecanvas.html
game/js/: ajax.js  input.js  map.js  sprites.js
game/spritesheet/: bomberman.json  bomberman.plist  bomberman.tps  bomberman_array.json
openerp/: README  openerp.py  openerp3.py
sdl/sdltest1/: Makefile  main.cpp  test1
settings/: .vimrc
wgl/: example1.html
